--- a/project_mine/Mine/Mine/Views/Game/GamePage.xaml
+++ b/project_mine/Mine/Mine/Views/Game/GamePage.xaml
@@ -4,6 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Mine.Views.GamePage">
     <ContentPage.Content>
-        
+        <StackLayout
+            VerticalOptions="CenterAndExpand"
+            HorizontalOptions="CenterAndExpand">
+
+            <Label Text="Welcome to my Homework!"
+                   FontSize="Large"/>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
