--- a/project_mine/Mine/Mine/Views/AboutPage.xaml
+++ b/project_mine/Mine/Mine/Views/AboutPage.xaml
@@ -36,7 +36,7 @@
             <StackLayout Orientation="Vertical" Padding="16,40,16,40" Spacing="10">
                 <Label Text="CPSC 5250 WQ22"></Label>
                 <Label Text="Shipra"></Label>
-                <Label Text="1/17/2022 - 8:28pm"></Label>
+                <Label x:Name="CurrentDateTimeLabel"></Label>
             </StackLayout>
         </ScrollView>
     </Grid>
