Added Update Message and method to ItemIndexViewModel.cs, ItemUpdatePage.xaml.cs

--- a/project_mine/Mine/Mine/Views/Items/ItemUpdatePage.xaml
+++ b/project_mine/Mine/Mine/Views/Items/ItemUpdatePage.xaml
@@ -9,7 +9,7 @@
     
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
-        <ToolbarItem Text="Save" Clicked="Save_Clicked" />
+        <ToolbarItem Text="Save" Clicked="UpdateItem" />
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
