--- a/project_mine/Mine/Mine/Views/Items/ItemUpdatePage.xaml
+++ b/project_mine/Mine/Mine/Views/Items/ItemUpdatePage.xaml
@@ -8,8 +8,8 @@
              Title="New Item">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
-        <ToolbarItem Text="Save" Clicked="UpdateItem" />
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" IconImageSource="icon_cancel.png"/>
+        <ToolbarItem Text="Save" Clicked="UpdateItem" IconImageSource="icon_save.png"/>
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
